objects/AttributesRules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>#MarketingTeam #Sprint14 Custom Setting para gestionar reglas de cancelación de atributos. Ej: Una cuenta no puede ser Menor de Edad y Jubilado a la vez.</description>
    <fields>
        <fullName>Attribute1__c</fullName>
        <label>Atributo 1</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute2__c</fullName>
        <label>Atributo 2</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Objeto a que hace referencia la regla: Account / Contact</description>
        <label>Objeto</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Reglas de Atributos</label>
    <listViews>
        <fullName>Campos</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Attribute1__c</columns>
        <columns>Attribute2__c</columns>
        <filterScope>Everything</filterScope>
        <label>Campos</label>
        <language>en_US</language>
    </listViews>
</CustomObject>